[tool.poetry]
name = "sleeper-end-of-season-matchup-totals"
version = "0.1.0"
description = ""
authors = ["Brad Lucas <brad.lucas@live.com>"]
readme = "README.md"
packages = [{include = "sleeper_end_of_season_matchup_totals"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
