[project]
name = "sleeper-cli"
version = "0.1.0"
description = ""
requires-python = ">=3.12"

[project.scripts]
season_totals = "sleeper_cli.cli:league_season_totals"

[tool.poetry]
authors = ["Brad Lucas <brad.lucas@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
click = "^8.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
